force-app/main/default/objects/Application__c/fields/DependentNotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>DependentNotificationEmail__c</fullName>
    <formula>IF(
 ISBLANK(
 DependentLicense__c), 
 DependentApplication__r.NotificationEmail__c 
,
 DependentLicense__r.NotificationEmail__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Notification Email</label>
    <type>Text</type>
</CustomField>