force-app/main/default/objects/Application__c/fields/DesiredExamDate__c.field-meta.xml
<CustomField>
    <fullName>DesiredExamDate__c</fullName>
    <label>Desired Exam Date</label>
    <type>Date</type>
</CustomField>