force-app/main/default/objects/Application__c/fields/DesiredExamIsland__c.field-meta.xml
<CustomField>
    <fullName>DesiredExamIsland__c</fullName>
    <label>Desired Exam Island</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - KONA</fullName>
            </value>
            <value>
                <fullName>H - HILO</fullName>
            </value>
            <value>
                <fullName>I - MOLOKAI</fullName>
            </value>
            <value>
                <fullName>K - KAUAI</fullName>
            </value>
            <value>
                <fullName>L - LANAI</fullName>
            </value>
            <value>
                <fullName>M - MAUI</fullName>
            </value>
            <value>
                <fullName>O - OAHU</fullName>
            </value>
            <value>
                <fullName>U - OUT-OF-STATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>