force-app/main/default/objects/Application__c/fields/DisciplinaryActionPendingAgainstYou__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryActionPendingAgainstYou__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, PO, AMD</description>
    <inlineHelpText>In the past two years, with regard to any medical or osteopathic medical license to practice in any state or country:
b) Is any disciplinary action pending against you?</inlineHelpText>
    <label>Disciplinary Action Pending Against You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>