force-app/main/default/objects/Application__c/fields/DisciplinaryAdverseActionPending__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryAdverseActionPending__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years, with regard to any educational training program or facility, state/federal controlled substance agency, local, state, federal or military professional or disciplinary body or any hospital privileging or credentialing body, grievance committee or any other medical group, including medical or osteopathic medical societies and speciality boards: 
b) Is any disciplinary or adverse action pending against you?</inlineHelpText>
    <label>Disciplinary/Adverse Action Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>