force-app/main/default/objects/Application__c/fields/DisplayDependencySection__c.field-meta.xml
<CustomField>
    <fullName>DisplayDependencySection__c</fullName>
    <formula>IF(

OR(

 TEXT(Type__c) = &quot;LICN - New License&quot;,
 TEXT(Type__c) = &quot;LICF - New License after Forfeiture&quot;,
 TEXT(Type__c) = &quot;ADDC - Additional Class&quot;,
 TEXT(Type__c) = &quot;REAC - Reactivation&quot;,
 TEXT(Type__c) = &quot;DUAL - Dual (Sole/RME or RME/RME or RME/Sole)&quot;),

true, 

false

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Dependency Section</label>
    <type>Checkbox</type>
</CustomField>