force-app/main/default/objects/Application__c/fields/DocGenSettingFormula__c.field-meta.xml
<CustomField>
    <fullName>DocGenSettingFormula__c</fullName>
    <formula>CASE( TEXT(Type__c), 
&quot;LICN - New License&quot;,&quot;LICN LICF Bounced Checks&quot;,  
&quot;LICF - New License after Forfeiture&quot;,&quot;LICN LICF Bounced Checks&quot;,  
&quot;RNEW - Renewal&quot;,&quot;RNEW RSTR Bounced Checks&quot;,  
&quot;RSTR - Restore - No A/I Status&quot;,&quot;RNEW RSTR Bounced Checks&quot;,&quot;RNEW RSTR Bounced Checks&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Gen Setting Formula</label>
    <type>Text</type>
</CustomField>