force-app/main/default/objects/Application__c/fields/DraftApplication__c.field-meta.xml
<CustomField>
    <fullName>DraftApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft Application</label>
    <referenceTo>Application_Cache__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>