force-app/main/default/objects/Application__c/fields/EducationCountry__c.field-meta.xml
<CustomField>
    <fullName>EducationCountry__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>