force-app/main/default/objects/Application__c/fields/EducationZipcode__c.field-meta.xml
<CustomField>
    <fullName>EducationZipcode__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>