force-app/main/default/objects/Application__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>PacPoint-KN06012020-Created for PVL Phase 1 Sprint 4</description>
    <formula>TransmittedDate__c + LicenseType__r.CompletebyDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>