force-app/main/default/objects/Application__c/fields/EMAStatus__c.field-meta.xml
<CustomField>
    <fullName>EMAStatus__c</fullName>
    <inlineHelpText>To be used by Employment Agencies Only.</inlineHelpText>
    <label>EMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer Paid Fee Agency</fullName>
            </value>
            <value>
                <fullName>Applicant Paid Fee Agency</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>