force-app/main/default/objects/Application__c/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>PacPoint-KN120419-Created for PVL Phase 1 Sprint 2</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>