force-app/main/default/objects/Application__c/fields/EmployerStreet__c.field-meta.xml
<CustomField>
    <fullName>EmployerStreet__c</fullName>
    <description>PacPoint-KN101719-Created for PVL Sprint 1 Phase 1</description>
    <label>Employer Street</label>
    <type>TextArea</type>
</CustomField>