force-app/main/default/objects/Application__c/fields/EmployerZipCode__c.field-meta.xml
<CustomField>
    <fullName>EmployerZipCode__c</fullName>
    <description>PacPoint-KN081819 - Created for PVL Phase 1</description>
    <label>Employer Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>