force-app/main/default/objects/Application__c/fields/EORemarks__c.field-meta.xml
<CustomField>
    <fullName>EORemarks__c</fullName>
    <description>PacPoint-IC080719- Created for PVL phase 1</description>
    <inlineHelpText>Please indicate what additional information they are requesting from Applicants.</inlineHelpText>
    <label>EO Remarks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>