force-app/main/default/objects/Application__c/fields/ExamApprovalTemplateRMESoleProp__c.field-meta.xml
<CustomField>
    <fullName>ExamApprovalTemplateRMESoleProp__c</fullName>
    <description>PacPoint-MV111419 - Created for PVL phase 1.Created to be used on PB to identify which Exam Approval Template to use.</description>
    <formula>IF(
 OR(
   LicenseType__r.Name = &quot;CT - RME&quot;,
   LicenseType__r.Name = &quot;CT - Sole Proprietor&quot;
 ), 
 true, 
 false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Approval Template RME/SoleProp</label>
    <type>Checkbox</type>
</CustomField>