force-app/main/default/objects/Application__c/fields/ExamEligibilityConfirmed__c.field-meta.xml
<CustomField>
    <fullName>ExamEligibilityConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>Indicates the Applicant has been confirmed for eligibly from NCSBN.</inlineHelpText>
    <label>Exam Eligibility Confirmed</label>
    <type>Checkbox</type>
</CustomField>