force-app/main/default/objects/Application__c/fields/ExamsTaken__c.field-meta.xml
<CustomField>
    <fullName>ExamsTaken__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PacPoint-MV091219 - Created for PVL phase 1. Populated via PB.
PacPoint-KN102319- Modified for PVL Sprint 2 Phase 1</description>
    <label>Exams Taken</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>