force-app/main/default/objects/Application__c/fields/ExcludedFromParticipation__c.field-meta.xml
<CustomField>
    <fullName>ExcludedFromParticipation__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years with regard to professional liability, participation in any health plan or federal or state health care program:
c) Have you ever relinquished participation or certification, or been denied, terminated, sanctioned, penalized, decertified, or otherwise excluded from participation?</inlineHelpText>
    <label>Excluded From Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>