force-app/main/default/objects/Application__c/fields/ExclusionfromWorkersComp__c.field-meta.xml
<CustomField>
    <fullName>ExclusionfromWorkersComp__c</fullName>
    <inlineHelpText>Online Renewal question: 5. I am claiming the exclusion from the requirement to obtain workers compensation insurance policy because:</inlineHelpText>
    <label>Exclusion from Workers Comp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensee is a Sole Proprietorship or Partnership with no Employees</fullName>
            </value>
            <value>
                <fullName>The RME owns at least 50%</fullName>
            </value>
            <value>
                <fullName>The RME owns at least 25%</fullName>
            </value>
            <value>
                <fullName>Licensee is an out of state contractor with no employees in Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>