force-app/main/default/objects/Application__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <description>PacPoint-KN06042020 - Created for PVL Phase 1 Sprint 4</description>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>