force-app/main/default/objects/Application__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <description>PacPoint-MV102119 - Created for PVL phase 1 to be able to search the Application Records based on FEIN</description>
    <inlineHelpText>The Federal Employer Identification Number for entities.</inlineHelpText>
    <label>FEIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>