force-app/main/default/objects/Application__c/fields/FieldprintStatus__c.field-meta.xml
<CustomField>
    <fullName>FieldprintStatus__c</fullName>
    <label>Fieldprint Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fingerprint Check Confirmed</fullName>
            </value>
            <value>
                <fullName>Fingerprint has NOT been submitted to Fieldprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>