force-app/main/default/objects/Application__c/fields/FieldprintStatusUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>FieldprintStatusUpdatedDate__c</fullName>
    <label>Fieldprint Status Updated Date</label>
    <type>DateTime</type>
</CustomField>