force-app/main/default/objects/Application__c/fields/FileEngines__c.field-meta.xml
<CustomField>
    <fullName>FileEngines__c</fullName>
    <description>* PacPoint-AZ011119 - Created for PVL phase 1</description>
    <label>File Engines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>