force-app/main/default/objects/Application__c/fields/FingerprintDate__c.field-meta.xml
<CustomField>
    <fullName>FingerprintDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>Provide the date you were fingerprinted to obtain the national (FBI) and State Criminal History Record Check.</inlineHelpText>
    <label>Fingerprint Date</label>
    <type>Date</type>
</CustomField>