force-app/main/default/objects/Application__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <formula>Applicant__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>