force-app/main/default/objects/Application__c/fields/FormallyDisciplinedAttestation__c.field-meta.xml
<CustomField>
    <fullName>FormallyDisciplinedAttestation__c</fullName>
    <description>In the past 2 years has your license in this state or any other jurisdiction been
formally disciplined by way of a fine, suspension, restriction, or revocation?</description>
    <inlineHelpText>In the past 2 years has your license in this state or any other jurisdiction been
formally disciplined by way of a fine, suspension, restriction, or revocation?</inlineHelpText>
    <label>Formally Disciplined - Attestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>