force-app/main/default/objects/Application__c/fields/FPTPLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>FPTPLicenseNumber__c</fullName>
    <description>Used for MYPVL Portal Renewals</description>
    <label>FPTP License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>