force-app/main/default/objects/Application__c/fields/FPTPName__c.field-meta.xml
<CustomField>
    <fullName>FPTPName__c</fullName>
    <description>Used for MyPVL Portal Questions</description>
    <label>FPTP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>