force-app/main/default/objects/Application__c/fields/FranchiseAgreements__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAgreements__c</fullName>
    <label>Franchise Agreements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>