force-app/main/default/objects/Application__c/fields/Generate_ADDP_Approved_Letter__c.field-meta.xml
<CustomField>
    <fullName>Generate_ADDP_Approved_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JF 9/20/23 created for case 31029</description>
    <label>Generate ADDP Approved Letter</label>
    <type>Checkbox</type>
</CustomField>