force-app/main/default/objects/Application__c/fields/GenerateADDCApprovalLetter__c.field-meta.xml
<CustomField>
    <fullName>GenerateADDCApprovalLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN03022021</description>
    <label>Generate ADDC Approval Letter</label>
    <type>Checkbox</type>
</CustomField>