force-app/main/default/objects/Application__c/fields/GenerateApprovedforExamLetter__c.field-meta.xml
<CustomField>
    <fullName>GenerateApprovedforExamLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082519 - Created for PVL phase 1</description>
    <inlineHelpText>Please confirm that you want to Generate an Approved for Exam Letter</inlineHelpText>
    <label>Generate Approved for Exam Letter</label>
    <type>Checkbox</type>
</CustomField>