force-app/main/default/objects/Application__c/fields/GenerateCheckoutForm__c.field-meta.xml
<CustomField>
    <fullName>GenerateCheckoutForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV112719 - Created for PVL phase 1</description>
    <label>Generate Checkout Form</label>
    <type>Checkbox</type>
</CustomField>