force-app/main/default/objects/Application__c/fields/GenerateDeficiencyNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateDeficiencyNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082219 - Created for PVL phase 1</description>
    <inlineHelpText>Please confirm that you would like to Generate a Deficiency Notification Letter</inlineHelpText>
    <label>Generate Deficiency Notification</label>
    <type>Checkbox</type>
</CustomField>