force-app/main/default/objects/Application__c/fields/GenerateFile__c.field-meta.xml
<CustomField>
    <fullName>GenerateFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV1011319 - Created for PVL phase 1. Used to trigger the Dog generate functionality that will create  a file.</description>
    <label>Generate File</label>
    <type>Checkbox</type>
</CustomField>