force-app/main/default/objects/Application__c/fields/GenerateGenericNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateGenericNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RdG Case 6789 - Created for PVL Phase 1 - Generate Generic Notification</description>
    <label>Generate Generic Notification</label>
    <type>Checkbox</type>
</CustomField>