force-app/main/default/objects/Application__c/fields/GenerateLicense__c.field-meta.xml
<CustomField>
    <fullName>GenerateLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC080819- Created for PVL phase 1</description>
    <inlineHelpText>Please confirm that the license needs to be generated</inlineHelpText>
    <label>Generate License</label>
    <type>Checkbox</type>
</CustomField>