force-app/main/default/objects/Application__c/fields/GenerateLicenseFeesNotice__c.field-meta.xml
<CustomField>
    <fullName>GenerateLicenseFeesNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082519 - Created for PVL phase 1</description>
    <label>Generate License Fees Notice</label>
    <type>Checkbox</type>
</CustomField>