force-app/main/default/objects/Application__c/fields/GenerateMassEmailNotificationFlow__c.field-meta.xml
<CustomField>
    <fullName>GenerateMassEmailNotificationFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for a critical case 27225 - KN 1/20/23</description>
    <label>Generate Mass Email &amp; Notification Flow</label>
    <type>Checkbox</type>
</CustomField>