force-app/main/default/objects/Application__c/fields/GenerateNoticeofRejection__c.field-meta.xml
<CustomField>
    <fullName>GenerateNoticeofRejection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV110519 - Created for PVL phase 1</description>
    <label>Generate Notice of Rejection</label>
    <type>Checkbox</type>
</CustomField>