force-app/main/default/objects/Application__c/fields/GenerateOnlineRenewal__c.field-meta.xml
<CustomField>
    <fullName>GenerateOnlineRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Online Renewal</label>
    <type>Checkbox</type>
</CustomField>