force-app/main/default/objects/Application__c/fields/GenerateRealEstateCert__c.field-meta.xml
<CustomField>
    <fullName>GenerateRealEstateCert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN10202020 - Created for PVL Sprint 6 Phase 1</description>
    <label>Generate Real Estate Cert</label>
    <type>Checkbox</type>
</CustomField>