force-app/main/default/objects/Application__c/fields/GenerateTemporaryLicense__c.field-meta.xml
<CustomField>
    <fullName>GenerateTemporaryLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint - JF 8419 - Generate Temporary License</description>
    <label>Generate Temporary License</label>
    <type>Checkbox</type>
</CustomField>