force-app/main/default/objects/Application__c/fields/GenerateX3RemedialCourseNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateX3RemedialCourseNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV091719 - Created for PVL phase 1</description>
    <inlineHelpText>Please confirm that you would like to Generate a &quot;X3/Remedial Course Needed Notification&quot; Letter</inlineHelpText>
    <label>Generate X3/Remedial Course Notification</label>
    <type>Checkbox</type>
</CustomField>