force-app/main/default/objects/Application__c/fields/GraduationDate__c.field-meta.xml
<CustomField>
    <fullName>GraduationDate__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>