force-app/main/default/objects/Application__c/fields/HabitualUserofAlcoholofaNarcotic__c.field-meta.xml
<CustomField>
    <fullName>HabitualUserofAlcoholofaNarcotic__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years, have you been addicted to, dependent on, or a habitual user of alcohol or of a narcotic, barbiturate, amphetamine, hallucinogen, or other drug having similar effects?</inlineHelpText>
    <label>Habitual User of Alcohol/of a Narcotic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>