force-app/main/default/objects/Application__c/fields/HasLicenseBeenRevokedSuspended__c.field-meta.xml
<CustomField>
    <fullName>HasLicenseBeenRevokedSuspended__c</fullName>
    <inlineHelpText>Has any license ever been revoked, suspended, or otherwise subject to disciplinary action by the Hawaii State Board or another state board?</inlineHelpText>
    <label>Has license been revoked, suspended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>