force-app/main/default/objects/Application__c/fields/Haveyoupracticednursingbefore__c.field-meta.xml
<CustomField>
    <fullName>Haveyoupracticednursingbefore__c</fullName>
    <inlineHelpText>Have you actively practiced nursing in Hawaii or any other State in the U.S. or U.S. territory within the past 5 years?</inlineHelpText>
    <label>Have you practiced nursing before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>