force-app/main/default/objects/Application__c/fields/HeldthisTypeofLicenseBefore__c.field-meta.xml
<CustomField>
    <fullName>HeldthisTypeofLicenseBefore__c</fullName>
    <label>Held this Type of License in Hawaii?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>