force-app/main/default/objects/Application__c/fields/How_Many_Units_Managed__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Units_Managed__c</fullName>
    <description>How many units does your brokerage manage in total?</description>
    <label>How Many Units Managed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>Over 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>