force-app/main/default/objects/Application__c/fields/IMLCCLicenseId__c.field-meta.xml
<CustomField>
    <fullName>IMLCCLicenseId__c</fullName>
    <description>JF 11/25/24: Created for capturing the unique identifier for license id from IMLCC</description>
    <label>IMLCC License Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>