force-app/main/default/objects/Application__c/fields/InCompliancewithChapter__c.field-meta.xml
<CustomField>
    <fullName>InCompliancewithChapter__c</fullName>
    <inlineHelpText>I am in compliance with all the provisions of Chapter 468L, HRS, regarding the client trust account.</inlineHelpText>
    <label>In Compliance with Chapter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>