force-app/main/default/objects/Application__c/fields/IndicateAPRNSpecialty__c.field-meta.xml
<CustomField>
    <fullName>IndicateAPRNSpecialty__c</fullName>
    <label>Indicate APRN Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>