force-app/main/default/objects/Application__c/fields/InitialReviewDate__c.field-meta.xml
<CustomField>
    <fullName>InitialReviewDate__c</fullName>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <inlineHelpText>The date when the application was moved out of A1</inlineHelpText>
    <label>Initial Review Date</label>
    <type>Date</type>
</CustomField>