force-app/main/default/objects/Application__c/fields/IsApplicationTerminated__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Application Terminated</label>
    <type>Checkbox</type>
</CustomField>