force-app/main/default/objects/Application__c/fields/IsBusinessPopulated__c.field-meta.xml
<CustomField>
    <fullName>IsBusinessPopulated__c</fullName>
    <formula>IF(
AND(
BusinessStreet__c &lt;&gt; &quot;&quot;,
BusinessCity__c &lt;&gt; &quot;&quot;,
OR(
BusinessZipCode__c &lt;&gt; &quot;&quot;,
TEXT(BusinessCountry__c) &lt;&gt; &quot;United States&quot;
)
),
&quot;Y&quot;,
&quot;N&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Business Populated</label>
    <type>Text</type>
</CustomField>